--- a/mesa/docs/capdb.yaml
+++ b/mesa/docs/capdb.yaml
@@ -432,260 +432,264 @@ libvsc*.so:
   :int: 619
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_EGRESS_SHAPERS_DLB
+- :str: MESA_CAP_QOS_EGRESS_SHAPER_FRAME
   :int: 620
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_POLICER_EXT_DPBL
+- :str: MESA_CAP_QOS_EGRESS_SHAPERS_DLB
   :int: 621
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_POLICER_EXT_TTM
+- :str: MESA_CAP_QOS_PORT_POLICER_EXT_DPBL
   :int: 622
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_EGRESS_QUEUE_SHAPERS_EB
+- :str: MESA_CAP_QOS_PORT_POLICER_EXT_TTM
   :int: 623
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_EGRESS_QUEUE_SHAPERS_CRB
+- :str: MESA_CAP_QOS_EGRESS_QUEUE_SHAPERS_EB
   :int: 624
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_EGRESS_QUEUE_CUT_THROUGH
+- :str: MESA_CAP_QOS_EGRESS_QUEUE_SHAPERS_CRB
   :int: 625
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_DSCP_REMARK_DP_AWARE
+- :str: MESA_CAP_QOS_EGRESS_QUEUE_CUT_THROUGH
   :int: 626
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QCL_KEY_TYPE
+- :str: MESA_CAP_QOS_DSCP_REMARK_DP_AWARE
   :int: 627
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QCL_DMAC_DIP
+- :str: MESA_CAP_QOS_QCL_KEY_TYPE
   :int: 628
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QCL_KEY_DMAC
+- :str: MESA_CAP_QOS_QCL_DMAC_DIP
   :int: 629
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QCL_KEY_DIP
+- :str: MESA_CAP_QOS_QCL_KEY_DMAC
   :int: 630
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QCL_KEY_INNER_TAG
+- :str: MESA_CAP_QOS_QCL_KEY_DIP
   :int: 631
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_SHAPER_CALIBRATE
+- :str: MESA_CAP_QOS_QCL_KEY_INNER_TAG
   :int: 632
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_FRAME_PREEMPTION
+- :str: MESA_CAP_QOS_SHAPER_CALIBRATE
   :int: 633
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_POLICER_BIT_RATE_MIN
+- :str: MESA_CAP_QOS_FRAME_PREEMPTION
   :int: 634
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_POLICER_BIT_RATE_MAX
+- :str: MESA_CAP_QOS_PORT_POLICER_BIT_RATE_MIN
   :int: 635
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_POLICER_BIT_BURST_MIN
+- :str: MESA_CAP_QOS_PORT_POLICER_BIT_RATE_MAX
   :int: 636
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_POLICER_BIT_BURST_MAX
+- :str: MESA_CAP_QOS_PORT_POLICER_BIT_BURST_MIN
   :int: 637
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_POLICER_FRAME_RATE_MIN
+- :str: MESA_CAP_QOS_PORT_POLICER_BIT_BURST_MAX
   :int: 638
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_POLICER_FRAME_RATE_MAX
+- :str: MESA_CAP_QOS_PORT_POLICER_FRAME_RATE_MIN
   :int: 639
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_POLICER_FRAME_BURST_MIN
+- :str: MESA_CAP_QOS_PORT_POLICER_FRAME_RATE_MAX
   :int: 640
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_POLICER_FRAME_BURST_MAX
+- :str: MESA_CAP_QOS_PORT_POLICER_FRAME_BURST_MIN
   :int: 641
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_POLICER_BIT_RATE_MIN
+- :str: MESA_CAP_QOS_PORT_POLICER_FRAME_BURST_MAX
   :int: 642
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_POLICER_BIT_RATE_MAX
+- :str: MESA_CAP_QOS_QUEUE_POLICER_BIT_RATE_MIN
   :int: 643
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_POLICER_BIT_BURST_MIN
+- :str: MESA_CAP_QOS_QUEUE_POLICER_BIT_RATE_MAX
   :int: 644
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_POLICER_BIT_BURST_MAX
+- :str: MESA_CAP_QOS_QUEUE_POLICER_BIT_BURST_MIN
   :int: 645
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_POLICER_FRAME_RATE_MIN
+- :str: MESA_CAP_QOS_QUEUE_POLICER_BIT_BURST_MAX
   :int: 646
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_POLICER_FRAME_RATE_MAX
+- :str: MESA_CAP_QOS_QUEUE_POLICER_FRAME_RATE_MIN
   :int: 647
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_POLICER_FRAME_BURST_MIN
+- :str: MESA_CAP_QOS_QUEUE_POLICER_FRAME_RATE_MAX
   :int: 648
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_POLICER_FRAME_BURST_MAX
+- :str: MESA_CAP_QOS_QUEUE_POLICER_FRAME_BURST_MIN
   :int: 649
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_SHAPER_BIT_RATE_MIN
+- :str: MESA_CAP_QOS_QUEUE_POLICER_FRAME_BURST_MAX
   :int: 650
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_SHAPER_BIT_RATE_MAX
+- :str: MESA_CAP_QOS_PORT_SHAPER_BIT_RATE_MIN
   :int: 651
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_SHAPER_BIT_BURST_MIN
+- :str: MESA_CAP_QOS_PORT_SHAPER_BIT_RATE_MAX
   :int: 652
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_SHAPER_BIT_BURST_MAX
+- :str: MESA_CAP_QOS_PORT_SHAPER_BIT_BURST_MIN
   :int: 653
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_SHAPER_FRAME_RATE_MIN
+- :str: MESA_CAP_QOS_PORT_SHAPER_BIT_BURST_MAX
   :int: 654
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_SHAPER_FRAME_RATE_MAX
+- :str: MESA_CAP_QOS_PORT_SHAPER_FRAME_RATE_MIN
   :int: 655
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_SHAPER_FRAME_BURST_MIN
+- :str: MESA_CAP_QOS_PORT_SHAPER_FRAME_RATE_MAX
   :int: 656
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_SHAPER_FRAME_BURST_MAX
+- :str: MESA_CAP_QOS_PORT_SHAPER_FRAME_BURST_MIN
   :int: 657
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_SHAPER_BIT_RATE_MIN
+- :str: MESA_CAP_QOS_PORT_SHAPER_FRAME_BURST_MAX
   :int: 658
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_SHAPER_BIT_RATE_MAX
+- :str: MESA_CAP_QOS_QUEUE_SHAPER_BIT_RATE_MIN
   :int: 659
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_SHAPER_BIT_BURST_MIN
+- :str: MESA_CAP_QOS_QUEUE_SHAPER_BIT_RATE_MAX
   :int: 660
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_SHAPER_BIT_BURST_MAX
+- :str: MESA_CAP_QOS_QUEUE_SHAPER_BIT_BURST_MIN
   :int: 661
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_SHAPER_FRAME_RATE_MIN
+- :str: MESA_CAP_QOS_QUEUE_SHAPER_BIT_BURST_MAX
   :int: 662
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_SHAPER_FRAME_RATE_MAX
+- :str: MESA_CAP_QOS_QUEUE_SHAPER_FRAME_RATE_MIN
   :int: 663
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_SHAPER_FRAME_BURST_MIN
+- :str: MESA_CAP_QOS_QUEUE_SHAPER_FRAME_RATE_MAX
   :int: 664
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_QUEUE_SHAPER_FRAME_BURST_MAX
+- :str: MESA_CAP_QOS_QUEUE_SHAPER_FRAME_BURST_MIN
   :int: 665
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_GLOBAL_STORM_BIT_RATE_MIN
+- :str: MESA_CAP_QOS_QUEUE_SHAPER_FRAME_BURST_MAX
   :int: 666
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_GLOBAL_STORM_BIT_RATE_MAX
+- :str: MESA_CAP_QOS_GLOBAL_STORM_BIT_RATE_MIN
   :int: 667
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_GLOBAL_STORM_BIT_BURST_MIN
+- :str: MESA_CAP_QOS_GLOBAL_STORM_BIT_RATE_MAX
   :int: 668
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_GLOBAL_STORM_BIT_BURST_MAX
+- :str: MESA_CAP_QOS_GLOBAL_STORM_BIT_BURST_MIN
   :int: 669
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_GLOBAL_STORM_FRAME_RATE_MIN
+- :str: MESA_CAP_QOS_GLOBAL_STORM_BIT_BURST_MAX
   :int: 670
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_GLOBAL_STORM_FRAME_RATE_MAX
+- :str: MESA_CAP_QOS_GLOBAL_STORM_FRAME_RATE_MIN
   :int: 671
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_GLOBAL_STORM_FRAME_BURST_MIN
+- :str: MESA_CAP_QOS_GLOBAL_STORM_FRAME_RATE_MAX
   :int: 672
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_GLOBAL_STORM_FRAME_BURST_MAX
+- :str: MESA_CAP_QOS_GLOBAL_STORM_FRAME_BURST_MIN
   :int: 673
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_STORM_BIT_RATE_MIN
+- :str: MESA_CAP_QOS_GLOBAL_STORM_FRAME_BURST_MAX
   :int: 674
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_STORM_BIT_RATE_MAX
+- :str: MESA_CAP_QOS_PORT_STORM_BIT_RATE_MIN
   :int: 675
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_STORM_BIT_BURST_MIN
+- :str: MESA_CAP_QOS_PORT_STORM_BIT_RATE_MAX
   :int: 676
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_STORM_BIT_BURST_MAX
+- :str: MESA_CAP_QOS_PORT_STORM_BIT_BURST_MIN
   :int: 677
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_STORM_FRAME_RATE_MIN
+- :str: MESA_CAP_QOS_PORT_STORM_BIT_BURST_MAX
   :int: 678
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_STORM_FRAME_RATE_MAX
+- :str: MESA_CAP_QOS_PORT_STORM_FRAME_RATE_MIN
   :int: 679
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_STORM_FRAME_BURST_MIN
+- :str: MESA_CAP_QOS_PORT_STORM_FRAME_RATE_MAX
   :int: 680
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_PORT_STORM_FRAME_BURST_MAX
+- :str: MESA_CAP_QOS_PORT_STORM_FRAME_BURST_MIN
   :int: 681
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_DSCP_CNT
+- :str: MESA_CAP_QOS_PORT_STORM_FRAME_BURST_MAX
   :int: 682
   :val: 
   :chip: libvsc*.so
-- :str: MESA_CAP_QOS_CPU_QUEUE_SHAPER
+- :str: MESA_CAP_DSCP_CNT
   :int: 683
+  :val: 
+  :chip: libvsc*.so
+- :str: MESA_CAP_QOS_CPU_QUEUE_SHAPER
+  :int: 684
   :val: 
   :chip: libvsc*.so
 - :str: MESA_CAP_ACL_POLICER_CNT
