--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -64,8 +64,8 @@ MEPA_LIB(LIB_NAME mepa_ocelot_pcb121 ADVANCED
          DRVS     mepa_drv_vtss_ts)
 
 MEPA_LIB(LIB_NAME mepa_sparx5 ADVANCED
-         DEFS     -DMEPA_HAS_VTSS       -DMEPA_HAS_AQR  -DMEPA_HAS_GPY2211  -DMEPA_HAS_LAN8814
-         DRVS     mepa_drv_vtss_10g_ts  mepa_drv_aqr    mepa_drv_intel      mepa_drv_lan8814)
+         DEFS     -DMEPA_HAS_VTSS       -DMEPA_HAS_AQR  -DMEPA_HAS_GPY2211  -DMEPA_HAS_LAN8814 -DMEPA_HAS_LAN884x
+         DRVS     mepa_drv_vtss_10g_ts  mepa_drv_aqr    mepa_drv_intel      mepa_drv_lan8814    mepa_drv_lan884x)
 
 
 MEPA_LIB(LIB_NAME mepa_sparx5_macsec ADVANCED
