--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -264,6 +264,7 @@ APP_TARGET(NAME app_vsc7546TSN         MESA vsc7546TSN         MEBA meba_sparx5)
 APP_TARGET(NAME app_vsc7558TSN         MESA vsc7558TSN         MEBA meba_sparx5)
 APP_TARGET(NAME app_vsc7558MSEC        MESA vsc7558TSN         MEBA meba_sparx5_macsec)
 APP_TARGET(NAME app_vsc7556            MESA vsc7556            MEBA meba_sparx5)
+APP_TARGET(NAME app_lan9698RED         MESA lan9698RED         MEBA meba_sparx5)
 APP_TARGET(NAME app_lan966x            MESA lan966x            MEBA meba_lan966x)
 APP_TARGET(NAME app_lan966x_lm         MESA lan966x_lm         MEBA meba_lan966x)
 APP_TARGET(NAME app_lan966x_ad         MESA lan966x_ad         MEBA meba_lan966x)
@@ -314,6 +315,7 @@ elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
         IMG_TARGET(NAME arm64_vsc7549TSN         TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
         IMG_TARGET(NAME arm64_vsc7546TSN         TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
         IMG_TARGET(NAME arm64_vsc7556            TYPE ext4     APP app_vsc7556         MACHINE fireant)
+		IMG_TARGET(NAME arm64_lan9698RED         TYPE ext4     APP app_lan9698RED      MACHINE lan969x)
         #IMG_TARGET(NAME arm64_ls1046_vsc7449     TYPE fit      APP app_vsc7449         MACHINE ls1046a)
         #IMG_TARGET(NAME arm64_ls1046_vsc7437     TYPE fit      APP app_vsc7437         MACHINE ls1046a)
         #IMG_TARGET(NAME arm64_ls1046_vsc7438     TYPE fit      APP app_vsc7438         MACHINE ls1046a)
