--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -45,8 +45,30 @@ list(APPEND API_MEBA_CACHE_IN mepa/include/microchip/ethernet/phy/api/types.h)
 list(APPEND API_MEBA_CACHE_IN mepa/include/microchip/ethernet/phy/api/phy.h)
 list(APPEND API_MEBA_CACHE_IN mepa/include/microchip/ethernet/phy/api/phy_macsec.h)
 list(APPEND API_MEBA_CACHE_IN mepa/include/microchip/ethernet/phy/api/phy_ts.h)
+list(APPEND API_MEBA_CACHE_IN mepa/vtss/include/vtss_phy_types.h)
+list(APPEND API_MEBA_CACHE_IN mepa/vtss/include/vtss_phy_1g_api.h)
+list(APPEND API_MEBA_CACHE_IN mepa/vtss/include/vtss_phy_10g_api.h)
+set(API_MESA_CACHE_AG_IN)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/afi.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/capability.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/clock.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/init.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/l2.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/l3.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/misc.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/mrp.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/packet.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/port.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/qos.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/security.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/synce.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/ts.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/tsn.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/types.h)
+list (APPEND API_MESA_CACHE_AG_IN mesa/include/microchip/ethernet/switch/api/vop.h)
 add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/mesa-ag/mesa-rpc.h ${CMAKE_CURRENT_BINARY_DIR}/mesa-ag/mesa-rpc.c
-                   COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../../mesa/scripts/ag2.rb -b ${CMAKE_CURRENT_SOURCE_DIR}/../.. -o ${CMAKE_CURRENT_BINARY_DIR}/mesa-ag ${API_MESA_CACHE_IN} ${API_MEBA_CACHE_IN} ${API_ME_CACHE_IN}
+                   COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../../mesa/scripts/ag2.rb -b ${CMAKE_CURRENT_SOURCE_DIR}/../.. -o ${CMAKE_CURRENT_BINARY_DIR}/mesa-ag ${API_MESA_CACHE_AG_IN} ${API_MEBA_CACHE_IN} ${API_ME_CACHE_IN}
                    DEPENDS mesa_cache
                    COMMENT "Generate mesa-rpc.h/mesa-rpc.c")
 add_custom_target(mesa_rpc_src DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/mesa-ag/mesa-rpc.h ${CMAKE_CURRENT_BINARY_DIR}/mesa-ag/mesa-rpc.c)
