--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -310,7 +310,8 @@ elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
         IMG_TARGET(NAME arm64_vsc7549TSN         TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
         IMG_TARGET(NAME arm64_vsc7546TSN         TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
         IMG_TARGET(NAME arm64_vsc7556            TYPE ext4     APP app_vsc7556         MACHINE fireant)
-		IMG_TARGET(NAME arm64_lan9698RED         TYPE ext4     APP app_lan9698RED      MACHINE lan969x)
+        IMG_TARGET(NAME arm64_lan9698RED         TYPE ext4     APP app_lan9698RED      MACHINE lan969x)
+        IMG_TARGET(NAME arm64_lan9698RED_lm      TYPE ext4     APP app_lan969x_lm      MACHINE lan969x)
         #IMG_TARGET(NAME arm64_ls1046_vsc7449     TYPE fit      APP app_vsc7449         MACHINE ls1046a)
         #IMG_TARGET(NAME arm64_ls1046_vsc7437     TYPE fit      APP app_vsc7437         MACHINE ls1046a)
         #IMG_TARGET(NAME arm64_ls1046_vsc7438     TYPE fit      APP app_vsc7438         MACHINE ls1046a)
