--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -85,3 +85,6 @@ MEPA_LIB(LIB_NAME mepa_lmstax_lan966x ADVANCED
          DEFS     -DMEPA_HAS_LAN8814
          DRVS     mepa_drv_lan8814_light)
 
+MEPA_LIB(LIB_NAME mepa_lmstax_lan969x ADVANCED
+         DEFS     -DMEPA_HAS_LAN8814 -DMEPA_HAS_LAN884x
+         DRVS     mepa_drv_lan8814_light mepa_drv_lan884x)
