--- a/mepa/docs/sitemap.yaml
+++ b/mepa/docs/sitemap.yaml
@@ -40,6 +40,8 @@ pages:
         - src: "mepa/docs/timestamp.adoc"
         - src: "mepa/docs/macsec.adoc"
         - src: "mepa/docs/warm-restart-phy.adoc"
+        - src: "mepa/docs/eee.adoc"
+        - src: "mepa/docs/phy-reset-considerations.adoc"
 
     - name: "MEPA API Reference"
       pages:
