--- a/mesa/docs/sitemap.yaml
+++ b/mesa/docs/sitemap.yaml
@@ -11,6 +11,9 @@ pages:
 
     - name: "Release notes"
       pages:
+        - name: "MESA-2024.03"
+          src:  "mesa/docs/release-notes/mesa-2024.03.adoc"
+
         - name: "MESA-2023.12"
           src:  "mesa/docs/release-notes/mesa-2023.12.adoc"
 
