--- a/.cmake/cmake-presets.yaml
+++ b/.cmake/cmake-presets.yaml
@@ -6,9 +6,9 @@ presets:
     mipsel:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2024.03"
+        :brsdk:            "2024.06"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
-#        :brsdk_branch:     "2024.03-soak"
+#        :brsdk_branch:     "2024.06-soak"
         :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
@@ -17,9 +17,9 @@ presets:
     mipsel-debug:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2024.03"
+        :brsdk:            "2024.06"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
-#        :brsdk_branch:     "2024.03-soak"
+#        :brsdk_branch:     "2024.06-soak"
         :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
@@ -27,8 +27,7 @@ presets:
     #lan966x:
     #    :arch:             "arm64"
     #    :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release -DLAN966X_ONLY=on"
-    #    :brsdk:            "2020.02.3-336"
-    #    :brsdk:            "2021.02-483"
+    #    :brsdk:            "2024.02-107"
     #    :brsdk_arch:       "arm64-armv8_a-linux-gnu"
     #    :brsdk_branch:     "brsdk.lan966x-3"
     #    :toolchainfile:    "arm64-armv8_a-linux-gnu/x86_64-linux/share/buildroot/toolchainfile.cmake"
@@ -39,9 +38,9 @@ presets:
     arm64:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2024.03"
+        :brsdk:            "2024.06"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-#        :brsdk_branch:     "2024.03-soak"
+#        :brsdk_branch:     "2024.06-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -50,9 +49,9 @@ presets:
     arm64-debug:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2024.03"
+        :brsdk:            "2024.06"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-#       :brsdk_branch:     "2024.03-soak"
+#        :brsdk_branch:     "2024.06-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -60,9 +59,9 @@ presets:
     arm64-asan:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug -DBUILD_ASAN=true"
-        :brsdk:            "2024.03"
+        :brsdk:            "2024.06"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-#       :brsdk_branch:     "2024.03-soak"
+#        :brsdk_branch:     "2024.06-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -70,9 +69,9 @@ presets:
     arm:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2024.03"
+        :brsdk:            "2024.06"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-#       :brsdk_branch:     "2024.03-soak"
+#        :brsdk_branch:     "2024.06-soak"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
@@ -81,18 +80,20 @@ presets:
     arm-debug:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2024.03"
+        :brsdk:            "2024.06"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-#       :brsdk_branch:     "2024.03-soak"
+#        :brsdk_branch:     "2024.06-soak"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
 
     x86:
-        :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release -DBUILD_MESA_CAPABILITY_DUMPER=true -DBUILD_MESA_DEMO=false"
-        :brsdk:            "2024.03"
+        :arch:             "x86_64"
+        :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release -DBUILD_MESA_DEMO=true"
+        :brsdk:            "2024.06"
+#        :brsdk_branch:     "2024.06-soak"
         :toolchain_branch: "toolchain"
-        :toolchainfile:    "x86_64-nocona-linux-gnu/share/buildroot/toolchainfile.cmake"
-        :cmake:            "x86_64-nocona-linux-gnu/bin/cmake"
+        :toolchainfile:    "x86_64-nocona-linux-gnu/standalone/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
+        :cmake:            "x86_64-nocona-linux-gnu/standalone/release/x86_64-linux/bin/cmake"
         :legal:            "x86_64-nocona-linux-gnu/legal-info"
 
